--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
 
  datasource:
-  url: jdbc:log4jdbc:oracle:thin:@beatcamps-152.cxqqny6qespu.ap-northeast-2.rds.amazonaws.com:1521:orcl
+  url: jdbc:log4jdbc:oracle:thin:@pm-service.c9cznzho9dcd.ap-northeast-2.rds.amazonaws.com:1521:orcl
   driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
   username: admin
   password: 12345678
